tests/baselines/reference/callOverloadViaElementAccessExpression.errors.txt
tests/cases/compiler/callOverloadViaElementAccessExpression.ts(10,5): error TS2322: Type '数字' is not assignable to type '文字'.
tests/cases/compiler/callOverloadViaElementAccessExpression.ts(11,5): error TS2322: Type '文字' is not assignable to type '数字'.


==== tests/cases/compiler/callOverloadViaElementAccessExpression.ts (2 errors) ====
    class C {
        foo(x: number): number;
        foo(x: string): string;
        foo(x: any): any {
            return null;
        }
    }
    
    var c = new C();
    var r: string = c['foo'](1);
        ~
!!! error TS2322: Type '数字' is not assignable to type '文字'.
    var r2: number = c['foo']('');
        ~~
!!! error TS2322: Type '文字' is not assignable to type '数字'.